fix (frontend): fixes scrollbar issue #69

--- a/src/ui/src/app/components/media-control/search-result-list/search-result-list.component.scss
+++ b/src/ui/src/app/components/media-control/search-result-list/search-result-list.component.scss
@@ -1,6 +1,6 @@
 .search-list{
   height:360px;
-  overflow: overlay;
+  overflow: auto;
 }
 
 
